WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122902
r157411
fails run-javascriptcore-tests when run with Baseline JIT
https://bugs.webkit.org/show_bug.cgi?id=122902
Summary
r157411 fails run-javascriptcore-tests when run with Baseline JIT
Mark Lam
Reported
2013-10-16 09:16:01 PDT
http://trac.webkit.org/changeset/157411
introduced a crash in run-javascriptcore-tests when running only the baseline JIT (no LLINT, no DFG).
Attachments
the patch
(1.81 KB, patch)
2013-10-16 16:25 PDT
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2013-10-16 09:16:42 PDT
It does not crash in
r157409
. Only started with
r157411
.
Mark Lam
Comment 2
2013-10-16 09:18:23 PDT
FYI, I was doing testing with 32-bit builds. Haven't checked if the crash manifests on 64-bit builds yet.
Mark Lam
Comment 3
2013-10-16 10:46:11 PDT
(In reply to
comment #2
)
> FYI, I was doing testing with 32-bit builds. Haven't checked if the crash manifests on 64-bit builds yet.
Correction: it's not a crash. It's a testapi failure, and run-javascriptcore-tests simply did not continue running thereafter. The issue also manifests on 64-bit builds. The failures are: FAIL: PropertyCatchalls.x should be 4 but instead is 5. FAIL: Test script returned unexpected value:
Filip Pizlo
Comment 4
2013-10-16 13:04:06 PDT
I'm looking at this.
Filip Pizlo
Comment 5
2013-10-16 16:25:27 PDT
Created
attachment 214402
[details]
the patch
Mark Hahnenberg
Comment 6
2013-10-16 16:27:21 PDT
Comment on
attachment 214402
[details]
the patch r=me
Filip Pizlo
Comment 7
2013-10-16 16:55:18 PDT
Landed in
http://trac.webkit.org/changeset/157541
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug